# gorilla

./: Cargo.toml  README.md
benches/: gorilla_bench.rs
src/: bitbuffer.rs  decoder.rs  encoder.rs  lib.rs
tests/: integration.rs
