[package]
name = "gorilla"
version = "0.1.0"
edition = "2021"
description = "Gorilla time-series compression algorithm (Facebook, 2015) implementation in Rust"
license = "MIT"
readme = "README.md"
keywords = ["compression", "time-series", "gorilla", "tsdb"]
categories = ["compression", "encoding"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gorilla_bench"
harness = false
